...
                    <Ionicons name="arrow-back" size={24} color="#FFF" />
                </TouchableOpacity>

                <KeyboardAvoidingView behavior={Platform.OS === "ios" ? "padding" : "height"} style={{ flex: 1, paddingHorizontal: 30, justifyContent: 'center' }}>

                    <View style={{ marginBottom: 40 }}>
                        <Text style={styles.title}>Welcome Back!</Text>
                        <Text style={styles.subtitle}>{"Let's get you back on track."}</Text>
                    </View>

                    {/* INPUTS */}
                    <View style={styles.inputGroup}>
                        <Text style={styles.label}>EMAIL ADDRESS</Text>
...
