...
                            setShowOptions={setShowOptions}
                            selectedPost={selectedPost}
                            handleOptionSelect={handleOptionSelect}
                            user={user}
                        />
                    )}
                    {activeTab === 'Explore' && renderExplore()}
                    {activeTab === 'Leaderboards' && renderLeaderboard()}
                    {activeTab === 'Clubs' && (
                        <ClubsTab
                            clubs={clubs}
                            searchQuery={searchQuery}
                            setSearchQuery={setSearchQuery}
...
